QT-5 Skeleton with pages + navigation with react router

--- a/quick-tick/package.json
+++ b/quick-tick/package.json
@@ -25,7 +25,9 @@
     "dayjs": "^1.11.5",
     "embla-carousel-react": "^7.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router": "^6.4.2",
+    "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
