--- a/quick-tick/package.json
+++ b/quick-tick/package.json
@@ -17,18 +17,21 @@
     "@mantine/form": "^5.5.4",
     "@mantine/hooks": "^5.5.4",
     "@mantine/modals": "^5.5.4",
-    "@mantine/notifications": "^5.5.4",
+    "@mantine/notifications": "^5.6.3",
     "@mantine/nprogress": "^5.5.4",
     "@mantine/prism": "^5.5.4",
     "@mantine/rte": "^5.5.4",
     "@mantine/spotlight": "^5.5.4",
     "@react-oauth/google": "^0.2.8",
+    "axios": "^1.1.3",
     "dayjs": "^1.11.5",
     "embla-carousel-react": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.2",
-    "react-router-dom": "^6.4.2"
+    "react-router-dom": "^6.4.2",
+    "recoil": "^0.7.6",
+    "recoil-persist": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
