--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
+        working-directory: ./quick-tick
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
