--- a/quick-tick/package.json
+++ b/quick-tick/package.json
@@ -40,8 +40,10 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
+    "recharts": "^2.2.0",
     "recoil": "^0.7.6",
-    "recoil-persist": "^4.2.0"
+    "recoil-persist": "^4.2.0",
+    "victory": "^36.6.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
