--- a/quick-tick/package.json
+++ b/quick-tick/package.json
@@ -38,6 +38,7 @@
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.3.4",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "recharts": "^2.2.0",
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-grid-layout": "^1.3.2",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
     "@vitejs/plugin-react": "^2.1.0",
