--- a/quick-tick/package.json
+++ b/quick-tick/package.json
@@ -35,6 +35,7 @@
     "axios": "^1.1.3",
     "dayjs": "^1.11.5",
     "embla-carousel-react": "^7.0.3",
+    "inspirational-quotes": "^2.0.1",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
