QT-20 env var for prod deploys vs local + lint/css fixes

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # Google Cloud Client ID & Secret - safe to commit for development instance
 VITE_GC_CLIENT_ID=1086380827453-ahe45p4f2arvl7iuooh07frk92siukkc.apps.googleusercontent.com
 VITE_GC_CLIENT_SECRET=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
+VITE_BASE_PATH=""
