--- a/package.json
+++ b/package.json
@@ -18,19 +18,19 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@mantine/carousel": "^5.5.4",
-    "@mantine/core": "^5.5.4",
-    "@mantine/dates": "^5.9.5",
-    "@mantine/dropzone": "^5.5.4",
-    "@mantine/form": "^5.9.5",
-    "@mantine/hooks": "^5.5.4",
-    "@mantine/modals": "^5.5.4",
-    "@mantine/notifications": "^5.6.3",
-    "@mantine/nprogress": "^5.5.4",
-    "@mantine/prism": "^5.5.4",
-    "@mantine/rte": "^5.5.4",
-    "@mantine/spotlight": "^5.5.4",
+    "@emotion/react": "11.10.4",
+    "@mantine/carousel": "5.5.4",
+    "@mantine/core": "5.5.4",
+    "@mantine/dates": "5.5.4",
+    "@mantine/dropzone": "5.5.4",
+    "@mantine/form": "5.5.4",
+    "@mantine/hooks": "5.5.4",
+    "@mantine/modals": "5.5.4",
+    "@mantine/notifications": "5.5.4",
+    "@mantine/nprogress": "5.5.4",
+    "@mantine/prism": "5.5.4",
+    "@mantine/rte": "5.5.4",
+    "@mantine/spotlight": "5.5.4",
     "@react-oauth/google": "^0.2.8",
     "axios": "^1.1.3",
     "dayjs": "^1.11.5",
