--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dayjs": "^1.11.5",
     "embla-carousel-react": "^7.0.3",
     "inspirational-quotes": "^2.0.1",
+    "quick-cyc": "^1.0.0",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
